# namaph

./: .env  .gitignore  Makefile  README.md
example-notebooks/: Grass.ipynb  Komatsuna.ipynb  NewSim.ipynb  [OLD]APIClient.ipynb  plants_sample_param.csv
example-notebooks/Ecosystem/: 100spec.csv  city_landuse.csv  grid.json  p_temp.csv  simulators.py  temp.py  types.py  utils.py
example-notebooks/resource/: type_weight.csv  umekita.json
namaph_city/: pyproject.toml  readme
namaph_city/namaph_city/: city.py
namaph_city/namaph_city/Ecosystem/: operations.py  plants.csv  types.py
namaphio/: Pipfile  config.yml  dependencies.py  main.py  runner.py
namaphio/data/: dump.rdb
namaphio/internal/: redis.py
namaphio/routers/: cityio.py  namaphio.py  simio.py
namaphio/simulators/: __init__.py  example.py
namaphviz/: .eslintcache  Dockerfile  package.json
namaphviz/public/: index.html  manifest.json
namaphviz/src/: index.css  index.tsx  store.ts
namaphviz/src/api/: namaphAPI.tsx
namaphviz/src/components/indicator/: AreaChart.tsx  Example.tsx  LineChart.tsx
namaphviz/src/components/viztheme/: Viztheme.module.css  Viztheme.tsx
namaphviz/src/features/counter/: counterSlice.ts
namaphviz/src/features/dataloader/: DataLoader.tsx  dataloaderSlice.ts
namaphviz/src/features/deckgl/: Deckgl.tsx
namaphviz/src/features/indicatorlist/: Indicatorlist.module.css  Indicatorlist.tsx
namaphviz/src/features/mapcontroller/: Mapcontroller.module.css  (+1 more)
namaphviz/src/settings/: 150y.json  biodiv.json  config.json  product_io.json  total_biomass.json
(+19 files in other folders)
